# Akbo

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
src/akbo/: main.py
src/akbo/shared/domain/: domain_event.py  entity.py  exceptions.py  value_object.py
tests/unit/: conftest.py
tests/unit/shared/domain/: test_domain_event.py  test_entity.py  test_value_object.py
