[project]
name = "akbo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
extend-exclude = ["alembic", "migrations", "dist", "build", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E","F",
  "B",
  "I",
  "UP",
  "N",
  "SIM",
  "C4",
  "RET",
  "TRY",
  "PT",
  "DTZ",
  "T20","T10",
  "S",
  "C90",
  "PL",
  "ERA"
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 12  # 기본 10이 버겁다면 12~15로 조정

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["DTZ", "S101", "D", "ANN", "T20", "T10"]
"alembic/**" = ["ALL"]


[tool.ruff.lint.isort]
known-first-party = ["akbo"]
combine-as-imports = true
force-sort-within-sections = true
from-first = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["akbo"]
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]